data/derived/comb/progs/unify/prog5167.ml.out
Characters 504-532:
  | Funny1(n)            -> (sqrt(abs_float(eval(n,x,y)))/1000);;
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
